--- a/FM_MyStat.Web/Views/Group/Update.cshtml
+++ b/FM_MyStat.Web/Views/Group/Update.cshtml
@@ -82,39 +82,17 @@
 </style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>Group managament</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
             <!-- SELECT2 EXAMPLE -->
-            <div class="card card-default">
-                <div class="card-header">
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-tool" data-card-widget="remove">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </div>
-                </div>
                 <!-- /.card-header -->
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-warning">
-                                <div class="card-header">
-                                    <h3 class="card-title">Update group</h3>
+                            <div class="card mt-4">
+                                <div class="card-header text center">
+                                    <h3 class="card-title" style="color:white">Update group</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
@@ -147,7 +125,7 @@
                                         </div>
                                         </div>
                                     <div class="card-footer">
-                                        <button type="submit" class="btn btn-warning">Update</button>
+                                    <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Update</button>
                                     </div>
                                 </form>
                             </div>
@@ -156,8 +134,6 @@
                 </div>
                 <!-- /.card -->
             </div>
-            <!-- /.row -->
-        </div>
         <!-- /.container-fluid -->
     </section>
     <!-- /.content -->
