--- a/FM_MyStat.Web/Views/Teacher/EditSubjects.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/EditSubjects.cshtml
@@ -82,24 +82,10 @@
     }
 </style>
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>Subject management</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
-            <div class="card card-default">
-                <div class="card-header">
-                    <h3 class="card-title">Edit subjects</h3>
-                </div>
+            <div class="card card-default mt-4">
                 <div class="card-body">
                     @if (ViewBag.CreateUserError != null)
                     {
@@ -109,9 +95,9 @@
                     }
                     <div class="row">
                         <div class="col-md-6 offset-md-3">
-                            <div class="card card-primary">
+                            <div class="card card-primary mt-4">
                                 <div class="card-header">
-                                    <h3 class="card-title">Edit Subjects for Teacher</h3>
+                                    <h3 class="card-title" style="color:white">Edit Subjects for Teacher</h3>
                                 </div>
                                 <form asp-action="EditSubjects" method="post">
                                     <div class="card-body">
@@ -129,7 +115,7 @@
                                         </div>
                                     </div>
                                     <div class="card-footer">
-                                        <button type="submit" class="btn btn-primary">Save</button>
+                                        <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Save</button>
                                     </div>
                                 </form>
 
