--- a/FM_MyStat.Web/Views/Teacher/Profile.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/Profile.cshtml
@@ -89,25 +89,15 @@
 </style>
 
 <div class="content-wrapper">
-    @*<h1>@Model.UserInfo.Email</h1>*@
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>User managament</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
     <section class="content">
         <div class="container-fluid">
             <div class="row">
                 <!-- First column -->
                 <div class="col-md-6">
                     <!-- General form elements -->
-                    <div class="card card-primary">
-                        <div class="card-header">
-                            <h3 class="card-title">Quick Example</h3>
+                    <div class="card card-primary mt-4">
+                        <div class="card-header text-center pt-4">
+                            <h3 class="card-title" style="color:white">Quick Example</h3>
                         </div>
 
                         @if (@ViewBag.UserUpdateError != null)
