--- a/FM_MyStat.Web/Views/News/Create.cshtml
+++ b/FM_MyStat.Web/Views/News/Create.cshtml
@@ -80,17 +80,6 @@
 </style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>News managament</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
@@ -100,9 +89,9 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-primary">
-                                <div class="card-header">
-                                    <h3 class="card-title">New news</h3>
+                            <div class="card card-primary mt-4">
+                                <div class="card-header text-center">
+                                    <h3 class="card-title" style="color:white">New news</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
