--- a/FM_MyStat.Web/Views/News/Edit.cshtml
+++ b/FM_MyStat.Web/Views/News/Edit.cshtml
@@ -81,39 +81,17 @@
 </style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>News managament</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
             <!-- SELECT2 EXAMPLE -->
-            <div class="card card-default">
-                <div class="card-header">
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-tool" data-card-widget="remove">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </div>
-                </div>
                 <!-- /.card-header -->
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-warning">
+                            <div class="card card-warning mt-4">
                                 <div class="card-header">
-                                    <h3 class="card-title">Update news</h3>
+                                    <h3 class="card-title" style="color:white">Update news</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
@@ -151,7 +129,6 @@
                     </div>
                 </div>
                 <!-- /.card -->
-            </div>
             <!-- /.row -->
         </div>
         <!-- /.container-fluid -->
