--- a/FM_MyStat.Web/Views/Student/Create.cshtml
+++ b/FM_MyStat.Web/Views/Student/Create.cshtml
@@ -102,9 +102,9 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-primary">
-                                <div class="card-header">
-                                    <h3 class="card-title">New student</h3>
+                            <div class="card card-primary mt-4">
+                                <div class="card-header pt-4 text-center">
+                                    <h3 class="card-title" style="color:white">New student</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
