--- a/FM_MyStat.Web/Views/Student/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Student/Edit.cshtml
@@ -83,8 +83,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
-                <div class="card z-index-0">
-                    <div class="text-center pt-4">
+                <div class="card z-index-0 mt-4">
+                    <div class="text-center pt-4 card-header">
                         <h5>Edit user information</h5>
                     </div>
                     <div class="card-body">
