--- a/FM_MyStat.Web/Views/Subject/Edit.cshtml
+++ b/FM_MyStat.Web/Views/Subject/Edit.cshtml
@@ -82,65 +82,42 @@
 </style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>Subject managament</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
 
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
-            <!-- SELECT2 EXAMPLE -->
-            <div class="card card-default">
-                <div class="card-header">
-                    <div class="card-tools">
-                        <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                            <i class="fas fa-minus"></i>
-                        </button>
-                        <button type="button" class="btn btn-tool" data-card-widget="remove">
-                            <i class="fas fa-times"></i>
-                        </button>
-                    </div>
-                </div>
-                <!-- /.card-header -->
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-5 offset-3">
-                            <div class="card card-warning">
-                                <div class="card-header">
-                                    <h3 class="card-title">Update subject</h3>
-                                </div>
-                                <!-- /.card-header -->
-                                <!-- form start -->
-                                @if (@ViewBag.AuthError != null)
-                                {
-                                    <span class="text-danger mt-3">@ViewBag.AuthError</span>
-                                }
-                                <form method="post" asp-controller="Subject" asp-action="Edit">
-                                    <div class="card-body">
-                                        <div class="form__group field">
-                                            <input type="text" asp-for="Name" name="name" class="form__field" placeholder="Subject name">
-                                            <span class="text-danger" asp-validation-for="Name"></span>
-                                            <label class="form__label">Subject</label>
-                                        </div>
-                                    </div>
-                                    <!-- /.card-body -->
-                                    <div class="card-footer">
-                                        <button type="submit" class="btn btn-warning">Update</button>
-                                    </div>
-                                </form>
+            <!-- /.card-header -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-5 offset-3">
+                        <div class="card mt-4">
+                            <div class="card-header">
+                                <h3 class="card-title" style="color:white">Update subject</h3>
                             </div>
+                            <!-- /.card-header -->
+                            <!-- form start -->
+                            @if (@ViewBag.AuthError != null)
+                            {
+                                <span class="text-danger mt-3">@ViewBag.AuthError</span>
+                            }
+                            <form method="post" asp-controller="Subject" asp-action="Edit">
+                                <div class="card-body">
+                                    <div class="form__group field">
+                                        <input type="text" asp-for="Name" name="name" class="form__field" placeholder="Subject name">
+                                        <span class="text-danger" asp-validation-for="Name"></span>
+                                        <label class="form__label">Subject</label>
+                                    </div>
+                                </div>
+                                <!-- /.card-body -->
+                                <div class="card-footer">
+                                    <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Update</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <!-- /.card -->
             </div>
+            <!-- /.card -->
             <!-- /.row -->
         </div>
         <!-- /.container-fluid -->
