--- a/FM_MyStat.Web/Views/Teacher/Create.cshtml
+++ b/FM_MyStat.Web/Views/Teacher/Create.cshtml
@@ -81,18 +81,7 @@
 </style>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1>Create new teacher</h1>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
-    <!-- Main content -->
+     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
             <!-- SELECT2 EXAMPLE -->
@@ -101,9 +90,9 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-5 offset-3">
-                            <div class="card card-primary">
-                                <div class="card-header">
-                                    <h3 class="card-title">New teacher</h3>
+                            <div class="card card-primary mt-4">
+                                <div class="card-header text-center pt-4">
+                                    <h3 class="card-title" style="color:white">New teacher</h3>
                                 </div>
                                 <!-- /.card-header -->
                                 <!-- form start -->
